quick fix to tidalsim script based on new pickling of model

--- a/notebooks/Plotting.ipynb
+++ b/notebooks/Plotting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "id": "a1ad80a7-3a3f-48b2-ae5b-75b8e012ea65",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "<module 'tidalsim.modeling.extrapolation' from '/scratch/vighneshiyer/chipyard/tools/tidalsim/tidalsim/modeling/extrapolation.py'>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "f3c8f574-0264-443d-bc0f-b453c4939d6a",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
+   "id": "f56a5954-78ef-40b8-8c99-d5c4e0276268",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ipc</th>\n",
+       "      <th>instret</th>\n",
+       "      <th>inst_count</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.749303</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.749303</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.811568</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.811568</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.772873</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>2000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3845</th>\n",
+       "      <td>0.749303</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1923000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3846</th>\n",
+       "      <td>0.749303</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1923000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3847</th>\n",
+       "      <td>0.749303</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1924000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3848</th>\n",
+       "      <td>0.749303</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1924000.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3849</th>\n",
+       "      <td>0.749303</td>\n",
+       "      <td>1000.0</td>\n",
+       "      <td>1925000.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3850 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           ipc  instret  inst_count\n",
+       "0     0.749303   1000.0         0.0\n",
+       "1     0.749303   1000.0      1000.0\n",
+       "2     0.811568   1000.0      1000.0\n",
+       "3     0.811568   1000.0      2000.0\n",
+       "4     0.772873   1000.0      2000.0\n",
+       "...        ...      ...         ...\n",
+       "3845  0.749303   1000.0   1923000.0\n",
+       "3846  0.749303   1000.0   1923000.0\n",
+       "3847  0.749303   1000.0   1924000.0\n",
+       "3848  0.749303   1000.0   1924000.0\n",
+       "3849  0.749303   1000.0   1925000.0\n",
+       "\n",
+       "[3850 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "perf_data_tidalsim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "37e2d161-03a0-49cd-9a0e-66d96b64f356",
    "metadata": {},
    "outputs": [],
@@ -59,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "e8168123-dbca-496f-b427-44658a253b70",
    "metadata": {},
    "outputs": [
