skip bootrom run in rtl sim, add full rtl sim arg to tidalsim script

--- a/notebooks/Plotting.ipynb
+++ b/notebooks/Plotting.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "a1ad80a7-3a3f-48b2-ae5b-75b8e012ea65",
    "metadata": {},
    "outputs": [
@@ -12,7 +12,7 @@
        "<module 'tidalsim.modeling.extrapolation' from '/scratch/vighneshiyer/chipyard/tools/tidalsim/tidalsim/modeling/extrapolation.py'>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "f3c8f574-0264-443d-bc0f-b453c4939d6a",
    "metadata": {},
    "outputs": [],
@@ -44,13 +44,12 @@
     "interval_length = 1000\n",
     "clusters = 12\n",
     "run_dir = get_run_dir(\"aha-mont64-fb8c96bc\") # TODO: Enter run_dir here\n",
-    "estimated_perf = tme.analyze_tidalsim_results(run_dir, interval_length, clusters, detailed_warmup_insts=100, elf=False)\n",
-    "true_perf = tme.parse_golden_perf(Path.cwd().parent.parent.parent / \"sims\" / \"vcs\" / \"aha-mont64_perf.csv\")"
+    "estimated_perf, true_perf = tme.analyze_tidalsim_results(run_dir, interval_length, clusters, detailed_warmup_insts=100, elf=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "165323da-eba8-4d2d-acab-6ecf724a201f",
    "metadata": {},
    "outputs": [
